Jump Start Changelog
====================

2.1.10 - XX/XX/XXXX
-------------------

* Fixed: Image `srcset` property not getting printed out when featured image is linked to lightbox.
* Fixed: Minor admin styling issues with WordPress 4.8+.

--------------------------------------------------------------

2.1.9 - 05/31/2017
------------------

* **Updated Theme Blvd framework to 2.6.8**
* New: Added option at *Appearance > Theme Options > Content > Blog Homepage* to set a separate post display for the blog homepage or "posts page."
* Improvement: On pages where where WooCommerce floating cart isn't supported (like checkout and cart page, itself), the cart icon now links to the cart page.
* Fixed: WooCommerce up-sells not showing on product pages (with WooCommerce 3.0+).
* Fixed: Minor WooCommerce HTML5 validation errors (with WooCommerce 3.0+).
* Fixed: Minor PHP warnings and errors on some server configurations.
* Fixed: Italic font style for quotes selected from Typography theme options not applying to quotes overlaid on featured images in Quote format posts.

--------------------------------------------------------------

2.1.8 - 05/08/2017
------------------

* **Updated Theme Blvd framework to 2.6.7**
* Fixed: WooCommerce floating shopping cart "View Cart" and "Checkout" buttons not lining up.
* Fixed: WooCommerce cross-sells not showing when enabled from Theme Options (and using WooCommerce 3.0+).
* Fixed: On Entrepreneur base, when selecting Title + Tagline for logo display in theme options, tagline wasn't displaying.
* Fixed: "Illegal string offset" PHP warnings on some server configurations when saving data with multi-check option types.
* Fixed: Occasional buggy behavior in loading variable-width Owl Carousel.
* Fixed: Simple slider image links to lightbox not working.

--------------------------------------------------------------

2.1.7 - 04/14/2017
------------------

* **Updated Theme Blvd framework to 2.6.6**