@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * Fixed: Image `srcset` property not getting printed out when featured image is linked to lightbox.
 * Fixed: Minor admin styling issues with WordPress 4.8+.
+* Fixed: Minor broken image links in CSS for Executive and Superuser bases.
 
 --------------------------------------------------------------
 
